--- a/index.html
+++ b/index.html
@@ -20,126 +20,136 @@
 </head>
 <body>
     <!-- Header -->
-<header>
-    <nav class="header">
+<header class="header container">
+    <nav class="header__nav">
         <a href="./index.html" class="web link">
           Web<span class="studio">Studio</span>
         </a>
 
-        <ul  class="list">
-          <li><a class='nav current link' href="./index.html">Студия</a></li>
-          <li><a class='nav link' href="./portfolio.html">Портфолио</a></li>
-          <li><a class='nav link' href="">Контакты</a></li>
+        <ul  class="nav__ul list">
+          <li class="nav__item"><a class='nav__link current link' href="./index.html">Студия</a></li>
+          <li class="nav__item"><a class='nav__link link' href="./portfolio.html">Портфолио</a></li>
+          <li class="nav__item"><a class='nav__link link' href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="list">
-        <li><a class='nav__adress link' href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class='nav__adress link' href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header__adress list">
+        <li class="adres__item"><a class='adress__link link' href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="adres__item"><a class='adress__link link' href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
 </header>
 <main>
     <!-- Hero -->
-<section class="hero">
+<section class="hero container">
     <h1 class="hero__bg">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
     <button type="button" class="hero__button">Заказать услугу</button>
 </section>
 <!-- Наши преимущества -->
-    <section class="section">
-        <h2 hidden>Наши преимущества</h2>
+    <section class="section container">
+        <h2 class='hidden'>Наши преимущества</h2>
        <ul class='feature list'>
-           <li>
+           <li class="feature__item">
                <h3 class="feature__title">Внимание к деталям</h3>
                <p class="feature__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
-           <li>
+           <li class="feature__item">
                <h3 class="feature__title">Пунктуальность</h3>
                <p class="feature__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
-           <li>
+           <li class="feature__item">
                <h3 class="feature__title">Планирование</h3>
                <p class="feature__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
-           <li>
+           <li class="feature__item">
                <h3 class="feature__title">Современные технологии</h3>
                <p class="feature__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
        </ul>
     </section>
     <!-- Чем мы занимемся -->
-    <section class="section">
+    <section class="section container">
         <h2 class="heading">Чем мы занимемся</h2>
-        <ul class='list'>
-            <li><img src="./images/img_code.jpg" width="370" height="294" alt="ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ"></li>
-            <li><img src="./images/box2.jpg" width="370" height="294" alt="МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ"></li>
-            <li><img src="./images/box3.jpg" width="370" height="294" alt="ДИЗАЙНЕРСКИЕ РЕШЕНИЯ"></li>
+        <ul class='heading__list list'>
+            <li class="heading__item"><img src="./images/img_code.jpg" width="370" height="294" alt="ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ"></li>
+            <li class="heading__item"><img src="./images/box2.jpg" width="370" height="294" alt="МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ"></li>
+            <li class="heading__item"><img src="./images/box3.jpg" width="370" height="294" alt="ДИЗАЙНЕРСКИЕ РЕШЕНИЯ"></li>
         </ul>
     </section>
     <!-- Наша команда -->
-    <section class="section">
+    <section class="section container">
         <h2 class="heading">Наша команда</h2>
         <ul class='team list'>
-          <li>
+          <li class="team__item">
             <img
               src="./images/igor.jpg"
               width="270"
               height="260"
               alt="Игорь Демьяненко"
             />
+            <div class="team__margin">
             <h3 class="team__member">Игорь Демьяненко</h3>
             <p class="team__job">Product Designer</p>
+          </div>
           </li>
-          <li>
+          <li class="team__item">
             <img
               src="./images/olha.jpg"
               width="270"
               height="260"
               alt="Ольга Репина"
             />
+            <div class="team__margin">
             <h3 class="team__member">Ольга Репина</h3>
             <p class="team__job">Frontend Developer</p>
+          </div>
           </li>
 
-          <li>
+          <li class="team__item">
             <img
               src="./images/nikolay.jpg"
               width="270"
               height="260"
               alt="Николай Тарасов"
             />
+            <div class="team__margin">
             <h3 class="team__member">Николай Тарасов</h3>
             <p class="team__job">Marketing</p>
+          </div>
           </li>
-          <li>
+          <li class="team__item">
             <img
               src="./images/mihail.jpg"
               width="270"
               height="260"
               alt="Михаил Ермаков"
             />
+            <div class="team__margin">
             <h3 class="team__member">Михаил Ермаков</h3>
             <p class="team__job">UI Designer</p>
+          </div>
           </li>
         </ul>
     </section>
 </main>
 <!-- Footer -->
-<footer class="footer">
-    <a href="./index.html" class="web link">
+<footer class="footer container">
+  <div class="footer-flex">
+    <a href="./index.html" class="footer__web link">
       Web<span class="studio-footer">Studio</span>
     </a>
     <address>
-      <ul class='list'>
-      <li>
+      <ul class='footer__list list'>
+      <li class="footer__item">
         <a class='footer__map normal link' href="https://goo.gl/maps/86em8GoFaQWGxfPu7"
         target="_blank"
         rel="noreferrer noopener"
         >г. Киев, пр-т Леси Украинки, д. 26
         </a>
       </li>
-      <li><a class='footer__address normal link' href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-      <li><a class='footer__address normal link' href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <li class="footer__item"><a class='footer__address normal link' href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+      <li class="footer__item"><a class='footer__address normal link' href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
     </address>
+  </div>
   </footer>
 </body>
 </html>
