Работа над ошибками

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,27 +18,30 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="header container">
+    <header class="header">
+      <div class="container header__container">
         <nav class="header__nav">
-            <a href="./index.html" class="web link">
+            <a href="./index.html" class="web">
               Web<span class="studio">Studio</span>
             </a>
     
-            <ul  class="nav__ul list">
-              <li class="nav__item"><a class='nav__link link' href="./index.html">Студия</a></li>
-              <li class="nav__item"><a class='nav__link current link' href="./portfolio.html">Портфолио</a></li>
-              <li class="nav__item"><a class='nav__link link' href="">Контакты</a></li>
+            <ul  class="nav__ul">
+              <li class="nav__item"><a class='nav__link' href="./index.html">Студия</a></li>
+              <li class="nav__item"><a class='nav__link current' href="./portfolio.html">Портфолио</a></li>
+              <li class="nav__item"><a class='nav__link' href="">Контакты</a></li>
             </ul>
           </nav>
-          <ul class="header__adress list">
-            <li class="adres__item"><a class='adress__link link' href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="adres__item"><a class='adress__link link' href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <ul class="header__adress">
+            <li class="adres__item"><a class='adress__link' href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="adres__item"><a class='adress__link' href="tel:+380961111111">+38 096 111 11 11</a></li>
           </ul>
+        </div>
     </header>
     <main>
-        <section class="section container">
+        <section class="section">
+          <div class="container">
             <h1 hidden>Portfolio</h1>
-            <ul class="filter list">
+            <ul class="filter">
                 <li class="filter__item"><button class="filter__button" type="button">Все</button></li>
                 <li class="filter__item"><button class="filter__button" type="button">Веб-сайты</button></li>
                 <li class="filter__item"><button class="filter__button" type="button">Приложения</button></li>
@@ -46,7 +49,7 @@
                 <li class="filter__item"><button class="filter__button" type="button">Маркетинг</button></li>
             </ul>
             
-        <ul class="portfolio list">
+        <ul class="portfolio">
             <li class='portfolio__item'>
                 <img class='portfolio__img'
                 src="images/portfolioimg/website.jpg"
@@ -147,25 +150,26 @@
               </div>
             </li>
         </ul>
+      </div>
     </section>
     </main>
     <!-- Footer -->
-    <footer class="footer container">
-        <div class="footer-flex">
-          <a href="./index.html" class="footer__web link">
+    <footer class="footer">
+        <div class="footer-flex  container">
+          <a href="./index.html" class="footer__web">
             Web<span class="studio-footer">Studio</span>
           </a>
           <address>
-            <ul class='footer__list list'>
+            <ul class='footer__list'>
             <li class="footer__item">
-              <a class='footer__map normal link' href="https://goo.gl/maps/86em8GoFaQWGxfPu7"
+              <a class='footer__map normal' href="https://goo.gl/maps/86em8GoFaQWGxfPu7"
               target="_blank"
               rel="noreferrer noopener"
               >г. Киев, пр-т Леси Украинки, д. 26
               </a>
             </li>
-            <li class="footer__item"><a class='footer__address normal link' href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-            <li class="footer__item"><a class='footer__address normal link' href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="footer__item"><a class='footer__address normal' href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+            <li class="footer__item"><a class='footer__address normal' href="tel:+380961111111">+38 096 111 11 11</a></li>
           </ul>
           </address>
         </div>
