--- a/index.html
+++ b/index.html
@@ -20,33 +20,38 @@
 </head>
 <body>
     <!-- Header -->
-<header class="header container">
+<header class="header">
+  <div class="container header__container">
     <nav class="header__nav">
-        <a href="./index.html" class="web link">
+        <a href="./index.html" class="web">
           Web<span class="studio">Studio</span>
         </a>
 
-        <ul  class="nav__ul list">
-          <li class="nav__item"><a class='nav__link current link' href="./index.html">Студия</a></li>
-          <li class="nav__item"><a class='nav__link link' href="./portfolio.html">Портфолио</a></li>
-          <li class="nav__item"><a class='nav__link link' href="">Контакты</a></li>
+        <ul  class="nav__ul">
+          <li class="nav__item"><a class='nav__link current' href="./index.html">Студия</a></li>
+          <li class="nav__item"><a class='nav__link' href="./portfolio.html">Портфолио</a></li>
+          <li class="nav__item"><a class='nav__link' href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="header__adress list">
-        <li class="adres__item"><a class='adress__link link' href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="adres__item"><a class='adress__link link' href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header__adress">
+        <li class="adres__item"><a class='adress__link' href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="adres__item"><a class='adress__link' href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
+    </div>
 </header>
 <main>
     <!-- Hero -->
-<section class="hero container">
+<section class="hero">
+  <div class="container">
     <h1 class="hero__bg">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
     <button type="button" class="hero__button">Заказать услугу</button>
+  </div>
 </section>
 <!-- Наши преимущества -->
-    <section class="section container">
+    <section class="section">
+      <div class="container">
         <h2 class='hidden'>Наши преимущества</h2>
-       <ul class='feature list'>
+       <ul class='feature'>
            <li class="feature__item">
                <h3 class="feature__title">Внимание к деталям</h3>
                <p class="feature__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -64,20 +69,24 @@
                <p class="feature__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
        </ul>
+      </div>
     </section>
     <!-- Чем мы занимемся -->
-    <section class="section container">
+    <section class="section our-work">
+      <div class="container">
         <h2 class="heading">Чем мы занимемся</h2>
-        <ul class='heading__list list'>
+        <ul class='heading__list'>
             <li class="heading__item"><img src="./images/img_code.jpg" width="370" height="294" alt="ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ"></li>
             <li class="heading__item"><img src="./images/box2.jpg" width="370" height="294" alt="МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ"></li>
             <li class="heading__item"><img src="./images/box3.jpg" width="370" height="294" alt="ДИЗАЙНЕРСКИЕ РЕШЕНИЯ"></li>
         </ul>
+      </div>
     </section>
     <!-- Наша команда -->
-    <section class="section container">
+    <section class="section our-team">
+      <div class="container">
         <h2 class="heading">Наша команда</h2>
-        <ul class='team list'>
+        <ul class='team'>
           <li class="team__item">
             <img
               src="./images/igor.jpg"
@@ -128,25 +137,26 @@
           </div>
           </li>
         </ul>
+      </div>
     </section>
 </main>
 <!-- Footer -->
-<footer class="footer container">
-  <div class="footer-flex">
-    <a href="./index.html" class="footer__web link">
+<footer class="footer">
+  <div class="footer-flex container">
+    <a href="./index.html" class="footer__web">
       Web<span class="studio-footer">Studio</span>
     </a>
     <address>
-      <ul class='footer__list list'>
+      <ul class='footer__list'>
       <li class="footer__item">
-        <a class='footer__map normal link' href="https://goo.gl/maps/86em8GoFaQWGxfPu7"
+        <a class='footer__map normal' href="https://goo.gl/maps/86em8GoFaQWGxfPu7"
         target="_blank"
         rel="noreferrer noopener"
         >г. Киев, пр-т Леси Украинки, д. 26
         </a>
       </li>
-      <li class="footer__item"><a class='footer__address normal link' href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-      <li class="footer__item"><a class='footer__address normal link' href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <li class="footer__item"><a class='footer__address normal' href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+      <li class="footer__item"><a class='footer__address normal' href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
     </address>
   </div>
